# dom-wallet

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
dom-wallet-source/dom-wallet/: build.rs
dom-wallet-source/dom-wallet/assets/: README.md
dom-wallet-source/dom-wallet/packaging/windows/peers/: peers.json
dom-wallet-source/dom-wallet/src/chain/: block.rs  state.rs  tx.rs
dom-wallet-source/dom-wallet/src/net/: p2p.rs  peer.rs
dom-wallet-source/dom-wallet/src/node/: mod.rs
dom-wallet-source/dom-wallet/src/persist/: paths.rs  runtime_state.rs  snapshot.rs
dom-wallet-source/dom-wallet/src/ui/: app.rs
dom-wallet-source/dom-wallet/src/ui/views/: carteira.rs  common.rs  configuracoes.rs  inicio.rs  mineracao.rs  rede.rs
dom-wallet-source/dom-wallet/src/wallet/: mod.rs
packaging/windows/config/: default.toml
src/: main.rs
src/chain/: mod.rs
src/mining/: mod.rs
src/net/: mod.rs
src/persist/: mod.rs
src/ui/: hero.rs  mod.rs  sidebar.rs  theme.rs
src/ui/views/: diagnosticos.rs  mod.rs  transacoes.rs
src/update/: mod.rs
