[package]
name = "dom-wallet"
version = "0.1.0"
edition = "2021"
authors = ["DOM Protocol"]
description = "DOM Wallet — Deterministic Monetary Network desktop client"
license = "MIT"

[[bin]]
name = "dom-wallet-app"
path = "src/main.rs"

[dependencies]
# UI
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.27"
egui_extras = { version = "0.27", features = ["image"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
toml = "0.8"

# Crypto
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand = "0.8"
rand_core = "0.6"
hmac = "0.12"
pbkdf2 = "0.12"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }

# Mnemonic / BIP39-like deterministic seeds
bip39 = "2"

# Encoding
base58 = "0.2"
bs58 = "0.5"

# Networking
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Time / logging
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility
anyhow = "1"
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"
dirs = "5"
directories = "5"

# Tray + window control (Windows)
[target.'cfg(windows)'.dependencies]
tray-icon = "0.13"
winit = "0.29"
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

